--- a/README
+++ b/README
@@ -1,14 +1,14 @@
-ABOUT
-------
+LANGTOOLS
+=========
 Langtools is a natural language tools library, written in Python 3.
 
 Modules:
  * gen -- Not very scientific word generator for a few languages
 
 WIKI
------
+----
 Langtools wiki is located at https://github.com/jnumm/langtools/wiki.
 
 LICENSE
---------
+-------
 Langtools is licensed under GNU GPL v3 (see COPYING).
